# auspostgen

./: .gitignore  .pre-commit-config.yaml  .releaserc  ACTION_PLAN.md  CHANGELOG.md  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
auspost/: auspost.c
auspostgen/: Makefile  __init__.py
auspostgen/_c/: CMakeCache.txt  Makefile  auspost.dylib  cmake_install.cmake
src/: __init__.py
src/_c/: CMakeLists.txt  auspost.c
src/auspostgen/: __init__.py
src/auspostgen/_c/: auspost.c
stampix/auspostgen/: generator.py
stampix/auspostgen/_c/: CMakeLists.txt  auspost.dylib
tests/: __init__.py  test_barcode.py  test_examples.py
