[tool.poetry]
name = "stampix-auspostgen"
version = "0.0.7"
description = "Generation of the Australia Post Barcode versions 37, 52, 67"
authors = ["Damian Dennis <damiandennis@gmail.com>", "Jaro Robberechts <jaro@stampix.com>"]
readme = "README.md"
packages = [{include = "stampix"}]

[build-system]
requires = ["scikit-build-core>=0.5.0"]
build-backend = "scikit_build_core.build"

[project]
name = "stampix-auspostgen"
version = "0.0.7"
description = "Generation of the Australia Post Barcode versions 37, 52, 67"
authors = [
    {name = "Damian Dennis", email = "damiandennis@gmail.com"},
    {name = "Jaro Robberechts", email = "jaro@stampix.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version:nf",
    "pyproject.toml:project.version:nf"
]
version_variables = [
    "stampix/auspostgen/__init__.py:__version__:nf",
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "python -m pip wheel . -v"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "11.2.1"
click = "8.1.8"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
auspostgen-image = "stampix.auspostgen:write_image"

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.source-dir = "stampix/auspostgen/_c"
cmake.build-type = "Release"
build.verbose = true
wheel.packages = ["stampix"]
wheel.cmake = true
wheel.py-api = "cp310"  # Target Python 3.10+ ABI
wheel.install-dir = "stampix/auspostgen/_c"  # Install relative to the package root
wheel.platlib = true  # Enable platform-specific library

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
ruff = "^0.0.282"
pre-commit = "^4.2.0"
python-semantic-release = "^8.0.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
skip-string-normalization = false
preview = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
